<resources>
    <string name="app_name">Market</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="driver">Driver</string>
    <string name="costumer">Costumer</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="not_a_user_signup">Not a user? Signup</string>
    <string name="email_address">Email Address</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="todo">TODO</string>
    <string name="Settings" />
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="map_key" translatable="false">
        AIzaSyCUgY5FNSqw-rgFqMf0b6pABps0AuSEGOg
    </string>
    <string name="quantity">Quantity</string>
    <string name="send_delivery_sms">Send Delivery SMS</string>
    <string name="view_order">View Order</string>
</resources>