<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="140dp" />

    <EditText
        android:id="@+id/txtEmail2"
        android:layout_width="344dp"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtName"
        app:layout_constraintStart_toStartOf="@+id/txtName"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="344dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <EditText
        android:id="@+id/txtPassword2"
        android:layout_width="344dp"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtEmail2"
        app:layout_constraintStart_toStartOf="@+id/txtEmail2"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail2"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/txtPass2"
        android:layout_width="344dp"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/verify_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtPassword2"
        app:layout_constraintStart_toStartOf="@+id/txtPassword2"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword2" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="114dp"
        android:layout_height="64dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/txtPass2"
        app:layout_constraintStart_toStartOf="@+id/txtPass2"
        app:layout_constraintTop_toBottomOf="@+id/txtPass2">

        <RadioButton
            android:id="@+id/rdbtndriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driver" />

        <RadioButton
            android:id="@+id/rdbtncos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/costumer" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSignup2"
        android:layout_width="204dp"
        android:layout_height="51dp"
        android:layout_marginTop="15dp"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup2"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

</androidx.constraintlayout.widget.ConstraintLayout>