<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="204dp"
        android:layout_height="63dp"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnSignup1"
        android:layout_width="266dp"
        android:layout_height="62dp"
        android:layout_marginTop="25dp"
        android:text="@string/not_a_user_signup"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <EditText
        android:id="@+id/txtPasslogin"
        android:layout_width="344dp"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/txtEmaillogin"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/txtEmaillogin"
        app:layout_constraintTop_toBottomOf="@+id/txtEmaillogin"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtEmaillogin"
        android:layout_width="344dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="140dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="161dp"
        android:layout_height="62dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/txtPasslogin">

        <RadioButton
            android:id="@+id/rdbtndriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driver" />

        <RadioButton
            android:id="@+id/rdbtncost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/costumer" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>